--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,17 +108,6 @@
   margin-left: 0.5rem;
 }
 
-/* Hello */
-
-.container {
-  display: flex;
-  flex-direction: row;
-}
-
-.heroImage {
-  margin: 10px;
-}
-
 @media (max-width: 600px) {
   .grid {
     width: 100%;
@@ -137,4 +126,17 @@
   .logo img {
     filter: invert(1);
   }
+}
+
+/* New Styles */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 1200px;
+  padding: 0px;
+}
+
+.heroImage {
+  margin: 10px;
 }
