--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,3 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -23,4 +15,42 @@ a {
     color: white;
     background: black;
   }
+}
+
+/* New Styles */
+
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Space Mono", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: #44475a;
+}
+
+.heading {
+  padding: 30px;
+}
+
+h1,
+p {
+  color: ghostwhite;
+}
+
+button {
+  margin: 30px 0px;
+  color: black;
+  background: #bd93f9;
+  border: 1px solid black;
+  padding: 15px;
+  border-radius: 15px;
+  font-family: "Space Mono", monospace;
+  cursor: pointer;
+  width: fit-content;
+}
+
+button:hover {
+  background: #8be9fd;
 }
